ecmascript/parser/tests/typescript-errors/tsc/es6/yieldExpressions/YieldExpression18_es6/input.ts.stderr
error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/es6/yieldExpressions/YieldExpression18_es6/input.ts:3:1
  |
3 | yield(foo);
  | ^^^^^

